tests/baselines/reference/assignToFn.errors.txt
==== tests/cases/compiler/assignToFn.ts (1 errors) ====
    module M {
        interface I {
        f(n:number):boolean;
        }
    
        var x:I={ f:function(n) { return true; } };
    
        x.f="hello";
        ~~~
!!! assignToFn.ts(8,5): error TS2012: Cannot convert 'string' to '(n: number) => boolean':
!!! 	Type '(n: number) => boolean' requires a call signature, but type 'String' lacks one.
    }
    